--- a/elasticsearch_view/modules/es_search/templates/es_search/index.html
+++ b/elasticsearch_view/modules/es_search/templates/es_search/index.html
@@ -67,9 +67,9 @@
 					<div class="col-sm-12 col-xs-12">
 						{{ format_record(recid, "hb", ln="en")|safe }}
 						{{ '<hr/>'|safe if not loop.last }}
-						{%- if document.results.highlights.get(recid, {}).get("fulltext") -%}
+						{%- if document.results.highlights.get(recid, {}).get("abstract.summary") -%}
 						<ul class="list-group highlights">
-							{%- for hl in document.results.highlights.get(recid, {}).get("fulltext") -%}
+							{%- for hl in document.results.highlights.get(recid, {}).get("abstract.summary") -%}
 							<li class="list-group-item">{{ hl|safe }}</li>
 							{%- endfor -%}
 						</ul>
